# kchat

./: README.md  pyproject.toml
src/kafkachat/kafka/: .con.py.swp  awscon.py  cchat.py  con.py  multichat.py  pchat.py  pro.py
