[project]
name = "kafkachat"
version = "0.2.0"
description = "KAFKA"
authors = [
    {name = "hun0219", email = "gsw98000@gmail.com"},
]
dependencies = []
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
kchat-ping="kafkachat.cli:ping"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
pythonpath="src"
